# MacroHardEngineEditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
code/: CMakelists.txt
code/src/: Application.cpp  Application.h  EntryPoint.cpp  GLFWApplication.cpp  GLFWApplication.h
code/src/Graphic/: Camera.cpp  Camera.h  Gizmo.cpp  Gizmo.h  GlHelpers.cpp  GlHelpers.h  IDrawable.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Transform.cpp  Transform.h
code/src/Logger/: Logger.cpp  Logger.h
code/src/Window/: DisplaySystem.cpp  DisplaySystem.h  IWindow.h  Window.cpp  Window.h
data/: FragmentShader.glsl  RenderDocCap.cap  VertexShader.glsl  dxt5OK.dds  gizmoFrag.glsl  gizmoVert.glsl  gridVert.glsl
libs/: CMakeLists.txt
vendors/: CMakelists.txt
vendors/glad/: CMakeLists.txt
vendors/glad/include/glad/: gl.h  wgl.h
vendors/glad/src/: gl.c
